--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>spring-boot-parent</module>
+        <module>spring-boot-hot-deploy</module>
     </modules>
 
 </project>
