--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -16,6 +16,9 @@
 
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
         <maven.test.skip>true</maven.test.skip>
+
+        <hikariCP.version>2.7.1</hikariCP.version>
+        <gatling-plugin.version>2.2.4</gatling-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -51,15 +54,49 @@
 
     <dependencies>
         <!-- Spring Boot 依赖-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+        <!-- 容器 undertow -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+
+        <!-- 移除 Tomcat 连接池，使用 HikariCP  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- 移除 tomcat-jdbc, Spring Boot 将会自动使用 HikariCP -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikariCP.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
