--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>spring-boot-combine-annotation</module>
+        <module>spring-boot-common</module>
         <module>spring-boot-gatling</module>
         <module>spring-boot-hot-deploy</module>
         <module>spring-boot-parent</module>
