--- a/spring-boot-gatling/pom.xml
+++ b/spring-boot-gatling/pom.xml
@@ -28,13 +28,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tomcat</groupId>
+                    <artifactId>tomcat-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- 移除 tomcat-jdbc, Spring Boot 将会自动使用 HikariCP -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>${hikariCP.version}</version>
         </dependency>
 
         <dependency>
