--- a/spring-boot-common/pom.xml
+++ b/spring-boot-common/pom.xml
@@ -24,6 +24,7 @@
         <maven.test.skip>true</maven.test.skip>
 
         <commons-lang3.version>3.7</commons-lang3.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
     </properties>
 
 	<dependencies>
@@ -57,6 +58,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
+
 	</dependencies>
 
     <build>
