--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -15,10 +15,11 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
+        <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
         <spring-boot-common.version>0.0.1-SNAPSHOT</spring-boot-common.version>
         <hikariCP.version>2.7.1</hikariCP.version>
         <disruptor.version>3.3.7</disruptor.version>
+        <assertj-core.version>3.9.0</assertj-core.version>
 
         <!-- maven 方式跳过 maven test, 等同 mvn package -Dmaven.test.skip=true -->
         <!-- Spring Boot 内部已经集成 maven-surefire-plugin 插件，可使用 <skipTests>true</skipTests> 跳过测试 -->
@@ -28,6 +29,7 @@
 
 
     <dependencyManagement>
+
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -36,6 +38,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
             <!-- HikariCP 高性能连接池 -->
             <dependency>
                 <groupId>com.zaxxer</groupId>
@@ -43,6 +46,7 @@
                 <version>${hikariCP.version}</version>
             </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <dependencies>
@@ -83,7 +87,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <exclusions>
+                <!-- 鉴于spring-boot-starter-test模块的assertj版本比较旧，故移除并使用最新版本 -->
+                <exclusion>
+                    <groupId>org.assertj</groupId>
+                    <artifactId>assertj-core</artifactId>
+                </exclusion>
+            </exclusions>
             <scope>test</scope>
+        </dependency>
+
+        <!-- 使用最新版的assertj，功能更强大 -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
         </dependency>
 
         <!-- Spring Mvc 依赖 -->
