--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -117,7 +117,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Web 容器 undertow -->
+        <!-- 使用高性能 Web 容器 undertow -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
