update spring boot version to 2.0.0.RC1

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>spring-boot-gatling</module>
         <module>spring-boot-hot-deploy</module>
         <module>spring-boot-parent</module>
+        <module>spring-boot-parent-dependencies</module>
+        <module>spring-boot-test-assertj</module>
     </modules>
 
 </project>
