--- a/spring-boot-disruptor/pom.xml
+++ b/spring-boot-disruptor/pom.xml
@@ -5,7 +5,7 @@
         <groupId>com.yangbingdong</groupId>
         <artifactId>spring-boot-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../spring-boot-parent/pom.xml</relativePath>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 
