--- a/spring-boot-common/pom.xml
+++ b/spring-boot-common/pom.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.yangbingdong</groupId>
+        <artifactId>spring-boot-parent-dependencies</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../spring-boot-parent-dependencies/pom.xml</relativePath>
+    </parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.yangbingdong</groupId>
 	<artifactId>spring-boot-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -11,28 +16,16 @@
 	<name>spring-boot-common</name>
 	<description>Demo project for Spring Boot</description>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.10.RELEASE</version>
-    </parent>
-
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
         <maven.test.skip>true</maven.test.skip>
-
-        <commons-lang3.version>3.7</commons-lang3.version>
-        <commons-collections4.version>4.1</commons-collections4.version>
     </properties>
 
 	<dependencies>
         <!--Spring Boot 核心依赖-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+        </dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -50,13 +43,11 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>${commons-collections4.version}</version>
         </dependency>
 
 	</dependencies>
