--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -62,15 +62,27 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Spring Mvc 依赖 -->
-        <dependency>
+        <!-- webflux 依赖 -->
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
             <exclusions>
-                <!-- 使用undertow -->
+                &lt;!&ndash; 移除默认web容器，使用undertow &ndash;&gt;
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-reactor-netty</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <!-- 移除默认web容器，使用undertow -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -114,25 +126,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <!--<repositories>
-        <repository>
-            <id>ali-repos</id>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ali-plugin</id>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>-->
-
 </project>
