--- a/spring-boot-common/pom.xml
+++ b/spring-boot-common/pom.xml
@@ -22,10 +22,17 @@
 
 	<dependencies>
         <!--Spring Boot 核心依赖-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>-->
+            <!-- 去除 logback 依赖 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
