--- a/spring-boot-gatling/src/main/resources/application.yml
+++ b/spring-boot-gatling/src/main/resources/application.yml
@@ -5,6 +5,13 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+#    type: com.zaxxer.hikari.HikariDataSource #Spring Boot2.0默认使用HikariDataSource
+    hikari:
+      connection-timeout: 30000 #等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 缺省:30秒
+      idle-timeout: 600000 #一个连接idle状态的最大时长（毫秒），超时则被释放（retired），缺省:10分钟
+      max-lifetime: 1800000 #一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒以上，参考MySQL wait_timeout参数（show variables like '%timeout%';）
+      maximum-pool-size: 9 #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+
   jpa:
     properties:
       hibernate:
