--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -115,6 +115,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>2.0.0.RELEASE</version>
                     <executions>
                         <execution>
                             <goals>
