--- a/spring-boot-data-jpa/src/main/resources/application.yml
+++ b/spring-boot-data-jpa/src/main/resources/application.yml
@@ -4,19 +4,43 @@
 #    username: root
 #    password: root
 #    driver-class-name: net.sf.log4jdbc.DriverSpy #com.mysql.jdbc.Driver
+#spring:
+#  datasource:
+#    url: jdbc:mysql://192.168.6.113:3306/sync?useUnicode=true&characterEncoding=utf8&useSSL=false # 注意加上 useSSL=false
+#    username: root
+#    password: root
+#    hikari:
+#      maximum-pool-size: 9 #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
 spring:
   datasource:
-    url: jdbc:mysql://192.168.6.113:3306/sync?useUnicode=true&characterEncoding=utf8&useSSL=false # 注意加上 useSSL=false
-    username: root
-    password: root
-    hikari:
-      maximum-pool-size: 9 #连接池中允许的最大连接数。缺省值：10；推荐的公式：((core_count * 2) + effective_spindle_count)
+    url: jdbc:h2:mem:test # 使用内存存储
+#    url: jdbc:h2:file:~/test # 使用物理盘存储
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  # 开启控制台
+  h2:
+    console:
+      # 开启控制台，默认为 /h2-console
+      enabled: true
+      # 配置控制台路径
+#      path: /console
 
   jpa:
     generate-ddl: false
     show-sql: true
     hibernate:
       ddl-auto: create-drop # create、create-drop、update、validate、none
+
+  ## DATA WEB 相关配置 {@link SpringDataWebProperties}
+  data:
+    web:
+      pageable:
+        default-page-size: 3 # 分页大小 默认为 20
+#        page-parameter: pageNum # 当前页参数名 默认为 page
+#        size-parameter: pageSize # 当前页参数名 默认为 size
+#      sort:
+#        sort-parameter: orderBy # 字段排序参数名 默认为 sort
 
   output:
     ansi:
