--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -62,30 +62,30 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- webflux 依赖 -->
-        <dependency>
+        <!-- webflux 依赖 H2控制台不支持 -->
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
             <exclusions>
-                <!-- 移除默认web容器，使用undertow -->
+                &lt;!&ndash; 移除默认web容器，使用undertow &ndash;&gt;
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-reactor-netty</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
-                &lt;!&ndash; 移除默认web容器，使用undertow &ndash;&gt;
+                <!-- 移除默认web容器，使用undertow -->
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>-->
+        </dependency>
 
         <!-- 使用高性能 Web 容器 undertow -->
         <dependency>
