--- a/spring-boot-parent-dependencies/pom.xml
+++ b/spring-boot-parent-dependencies/pom.xml
@@ -29,6 +29,9 @@
         <contiperf.version>2.1.0</contiperf.version>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
         <snakeyaml.version>1.19</snakeyaml.version>
+        <kafka-clients.version>1.1.0</kafka-clients.version>
+        <resources.plugin.version>3.0.2</resources.plugin.version>
+        <docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
     </properties>
 
 
@@ -43,12 +46,14 @@
                 <version>${disruptor.version}</version>
             </dependency>
 
+            <!-- Apache 通用工具类库 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
 
+            <!-- Apache 集合工具类库 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
@@ -75,27 +80,14 @@
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
             </dependency>
+
+            <!-- kafka客户端 -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka-clients.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
-    <!--<repositories>
-        <repository>
-            <id>ali-repos</id>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ali-plugin</id>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>-->
-
 </project>
