--- a/spring-boot-docker/src/main/docker/Dockerfile
+++ b/spring-boot-docker/src/main/docker/Dockerfile
@@ -3,5 +3,5 @@ MAINTAINER yangbingdong <yangbingdong1994@gmail.com>
 ENV PROJECT_NAME="@project.build.finalName@.@project.packaging@" JAVA_OPTS=""
 ADD $PROJECT_NAME app.jar
 RUN sh -c 'touch /app.jar'
-CMD ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+CMD ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Dspring.profiles.active=${ACTIVE:-docker} -jar /app.jar"]
 # ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
