--- a/spring-boot-parent/pom.xml
+++ b/spring-boot-parent/pom.xml
@@ -140,6 +140,12 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
+        <!-- YAML文件解析 -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
