add access log in docker module

--- a/spring-boot-docker/pom.xml
+++ b/spring-boot-docker/pom.xml
@@ -28,6 +28,19 @@
             <artifactId>kafka-clients</artifactId>
         </dependency>
 
+        <!-- 默认使用 HikariCP 连接池  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!-- h2 数据源连接驱动 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
