persist access log

--- a/spring-boot-docker/src/main/resources/application.yml
+++ b/spring-boot-docker/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     console:
       # 开启控制台，默认为 /h2-console
       enabled: true
-      path: /console
+#      path: /console
       settings:
         web-allow-others: true
 
