--- a/spring-boot-docker/src/main/resources/application.yml
+++ b/spring-boot-docker/src/main/resources/application.yml
@@ -2,6 +2,14 @@ spring:
   profiles:
     active: dev
 
+   # MYSQL 连接
+#  datasource:
+#    url: jdbc:log4jdbc:mysql://192.168.6.113:3306/my_test?useUnicode=true&characterEncoding=utf8&useSSL=false
+#    username: root
+#    password: root
+#    driver-class-name: net.sf.log4jdbc.DriverSpy
+
+  # H2 连接
   datasource:
     url: jdbc:h2:mem:test # 使用内存存储
 #    url: jdbc:h2:file:~/test # 使用物理盘存储
